// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Community flop 1`] = `
<div
  className="container"
>
  <h3
    className="round"
  >
    Flop
  </h3>
  <h1
    className="board"
  >
    As 7h 2d __ __
  </h1>
  <h3
    className="pot"
  >
    Pot: 
    0
  </h3>
</div>
`;

exports[`Storyshots Community preflop 1`] = `
<div
  className="container"
>
  <h3
    className="round"
  >
    Preflop
  </h3>
  <h1
    className="board"
  >
    __ __ __ __ __
  </h1>
  <h3
    className="pot"
  >
    Pot: 
    0
  </h3>
</div>
`;

exports[`Storyshots Community river 1`] = `
<div
  className="container"
>
  <h3
    className="round"
  >
    River
  </h3>
  <h1
    className="board"
  >
    As 7h 2d 3c Jd
  </h1>
  <h3
    className="pot"
  >
    Pot: 
    0
  </h3>
</div>
`;

exports[`Storyshots Community turn 1`] = `
<div
  className="container"
>
  <h3
    className="round"
  >
    Turn
  </h3>
  <h1
    className="board"
  >
    As 7h 2d 3c __
  </h1>
  <h3
    className="pot"
  >
    Pot: 
    0
  </h3>
</div>
`;

exports[`Storyshots Community with pot 1`] = `
<div
  className="container"
>
  <h3
    className="round"
  >
    River
  </h3>
  <h1
    className="board"
  >
    As 7h 2d 3c Jd
  </h1>
  <h3
    className="pot"
  >
    Pot: 
    150
  </h3>
</div>
`;
